style: fix all spotless formatting violations
Apply google-java-format via spotless:apply across all modules.
Fix 2 files with import comments that blocked the formatter
(EntitlementCacheEvictor, ApplyTenantPlanCommandHandler).

2359 files reformatted (indentation 4→2 spaces, import ordering).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>